# merge_intervals

./: CMakeLists.txt  README.md  build.sh
cmake/modules/: Catch.cmake  CatchAddTests.cmake
src/: CMakeLists.txt  Interval.cxx  Interval.hxx
tests/: CMakeLists.txt
tests/catch2/: CMakeLists.txt  catch.hpp  catch_main.cxx
tests/unit_tests/: CMakeLists.txt  merge_tests.cxx
